[gd_scene format=3 uid="uid://d34uvd7dyk6ad"]

[ext_resource type="Script" uid="uid://c6gkbqyw4s727" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bvfdv84vycrc6" path="res://player_focus.gd" id="2_1jxqw"]
[ext_resource type="Script" uid="uid://cjt5a037au3cc" path="res://reticle.gd" id="2_onrkg"]
[ext_resource type="Script" uid="uid://je43vo2yfc3m" path="res://fps_counter.gd" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://3j80b3qbkxwk" path="res://looking_at.gd" id="4_hqtel"]
[ext_resource type="Texture2D" uid="uid://cn5ffesuspu81" path="res://res/cursor_cube.png.png" id="5_2hs0m"]
[ext_resource type="Script" uid="uid://c4r7nsapt0x4y" path="res://block_selection_indicator.gd" id="6_2hs0m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]
radius = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_onrkg"]
font_size = 31
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1jxqw"]
transparency = 1
shading_mode = 0
disable_ambient_light = true
disable_fog = true
disable_specular_occlusion = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("5_2hs0m")
uv1_offset = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
texture_filter = 0
disable_receive_shadows = true

[sub_resource type="BoxMesh" id="BoxMesh_sweqy"]

[node name="Player" type="CharacterBody3D" unique_id=165270570]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=2086274004]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sh265")

[node name="Head" type="Node3D" parent="." unique_id=1987293831]

[node name="PlayerEyes" type="Camera3D" parent="Head" unique_id=394233840]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
current = true

[node name="PlayerFocus" type="RayCast3D" parent="Head/PlayerEyes" unique_id=1233330407]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
target_position = Vector3(0, -256, 0)
hit_back_faces = false
script = ExtResource("2_1jxqw")

[node name="HUD" type="Control" parent="Head/PlayerEyes" unique_id=914245732]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Head/PlayerEyes/HUD" unique_id=1260019103]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reticle" type="Control" parent="Head/PlayerEyes/HUD/CenterContainer" unique_id=1557326692]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_onrkg")

[node name="MarginContainer" type="MarginContainer" parent="Head/PlayerEyes/HUD" unique_id=1169211668]
layout_mode = 0
offset_right = 69.0
offset_bottom = 44.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Head/PlayerEyes/HUD/MarginContainer" unique_id=262651411]
layout_mode = 2

[node name="FPSCounter" type="Label" parent="Head/PlayerEyes/HUD/MarginContainer/VBoxContainer" unique_id=670453691]
layout_mode = 2
text = "FPS: "
label_settings = SubResource("LabelSettings_onrkg")
script = ExtResource("3_i3pqv")

[node name="LookingAt" type="Label" parent="Head/PlayerEyes/HUD/MarginContainer/VBoxContainer" unique_id=1976114076]
layout_mode = 2
text = "Target: "
label_settings = SubResource("LabelSettings_onrkg")
script = ExtResource("4_hqtel")

[node name="BlockNormal" type="Label" parent="Head/PlayerEyes/HUD/MarginContainer/VBoxContainer" unique_id=1935293151]
layout_mode = 2
text = "Normal: "
label_settings = SubResource("LabelSettings_onrkg")
script = ExtResource("4_hqtel")

[node name="SpawnAltitudeCast" type="RayCast3D" parent="." unique_id=710311164]
target_position = Vector3(0, -1000, 0)

[node name="BlockSelectionIndicator" type="MeshInstance3D" parent="." unique_id=1296808633]
transform = Transform3D(1.001, 0, 0, 0, 1.001, 0, 0, 0, 1.001, 0, 1.75, 0)
material_override = SubResource("StandardMaterial3D_1jxqw")
cast_shadow = 0
mesh = SubResource("BoxMesh_sweqy")
script = ExtResource("6_2hs0m")
